Added new queries
