# src/routes/authRoute.js
@@ -1,9 +1,10 @@
 import Router from "express";
-import { login, register } from "../controllers/authController.js";
+import { login, register, getAllPassengers } from "../controllers/authController.js";
 
 const router = Router();
 
 router.post("/login", login);
 router.post("/register", register);
+router.get("/passengers", getAllPassengers);
 
 export default router;
